@@ -1,6 +1,11 @@
 2012-03-22  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
+	2012-03-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/52521
+	* g++.dg/cpp0x/udlit-args2.C: New test.
+
 	2012-03-13  Jakub Jelinek  <jakub@redhat.com>
  
 	PR c/52577
